[gd_scene load_steps=4 format=3 uid="uid://c6g25npt406j7"]

[ext_resource type="Script" path="res://scripts/zombie.gd" id="1_abcde"]
[ext_resource type="Texture2D" path="res://icon.svg" id="2_fghij"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_12345"]
radius = 58.0
height = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_44556"]
radius = 400.0

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_abcde")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.5, 0.5, 1)
texture = ExtResource("2_fghij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_12345")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_44556")

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
